# AlgorithmNotes

./: CMakeLists.txt  README.md  main.cpp
02-Arrays/Dynamic-Array/: Array.java
02-Arrays/Generic-Data-Structures/: Array.java
03-Stacks-and-Queues/02-Array-Stack/: Array.java
03-Stacks-and-Queues/05-Array-Queue/: Main.java
03-Stacks-and-Queues/06-Loop-Queue/: LoopQueue.java
04-Linked-List/03-DummyHead-in-LinkedList/: LinkedList.java
04-Linked-List/04-Query-and-Update-in-LinkedList/: LinkedList.java
04-Linked-List/05-Remove-Element-in-LinkedList/: LinkedList.java
04-Linked-List/06-Implement-Stack-in-LinkedList/: LinkedListStack.java
05-Recursion/01-Linked-List-Problems-in-Leetcodesrc/: Solution2.java  Solution3.java
05-Recursion/02-Test-Your-LinkedList-Solution/: Solution.java
06-Binary-Search-Tree/09-Non-Recursion-Preorder-Traverse/: BST.java
07-Set-and-Map/03-Time-Complexity-of-Set/: BSTSet.java  LinkedListSet.java
07-Set-and-Map/05-Map-Basics/: Map.java
07-Set-and-Map/08-More-about-Map/: BSTMap.java  Main.java
08-Heap-and-Priority-Queue/02-Heap-Basics/: MaxHeap.java
08-Heap-and-Priority-Queue/03-Add-and-Sift-Up-in-Heap/: Array.java  MaxHeap.java
C++/: CMakeLists.txt  main.cpp
C++/DataStructures/: CMakeLists.txt
C++/DataStructures/adt/array/: Array.h
C++/DataStructures/adt/list/: LinkedList.h
C++/DataStructures/adt/queue/: ArrayQueue.h
C++/DataStructures/adt/stack/: LinkedListStack.h
C++/adt/: Array.h  (+4 more)
Leetcode-Top100/: README.md
linear/: linear_search.h
sort/: selection_sort.h
test/: linear.h  sort.h
util/: array.h
(+272 files in other folders)
